# ProceduresVsObjects

./: CMakeLists.txt  main.cpp  main.h  procedural.cpp  procedural.h
ObjectOriented/: circle.cpp  circle.h  oval.cpp  oval.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
